--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
 			<div class="container">
 				<div class="topbar_inner">
 					<div class="logo">
-						<h2></h2>
-					</div>
+						<a href="#"><img src="img/1.png" alt=""></a>
+						</div>
 					<div class="right">
 						<div class="social">
-
+					
 						</div>
 						<div class="iknow_tm_button">
 							<a href="https://wa.me/905347689576" download>İletişim</a>
@@ -118,11 +118,7 @@
 									<span>Özgeçmiş</span>
 									<a class="iknow_tm_full_link" href="#resume"></a>
 								</li>
-								<li>
-									<img class="svg" src="img/svg/briefcase.svg" alt="Cansın İçgöz" />
-									<span>Portföy</span>
-									<a class="iknow_tm_full_link" href="#portfolio"></a>
-								</li>
+					
 
 
 
@@ -274,7 +270,7 @@
 											<div class="list_inner">
 												<div class="short">
 													<div class="job">
-														<h3>Çankaya İMKB anadolu lisesi</h3>
+														<h3>Çankaya İMKB Anadolu Lisesi</h3>
 
 													</div>
 													<div class="year">
@@ -305,7 +301,7 @@
 														<span>TİTAN BİLİŞİM</span>
 													</div>
 													<div class="year">
-														<span>2021 - running</span>
+														<span>2021 - Günümüz</span>
 													</div>
 												</div>
 												<div class="text">
@@ -420,154 +416,7 @@
 				</div>
 				<!-- /RESUME -->
 
-				<!-- PORTFOLIO -->
-				<div id="portfolio" class="iknow_tm_main_section">
-					<div class="iknow_tm_portfolio">
-						<div class="iknow_tm_main_title">
-							<span></span>
-							<h3>Hizmetler Portföy</h3>
-						</div>
-						<div class="portfolio_filter">
-							<ul>
-								<li><a href="#" class="current" data-filter="*"></a></li>
 
-							</ul>
-						</div>
-						<div class="portfolio_list">
-							<ul class="gallery_zoom">
-								<li class="vimeo">
-									<div class="list_inner">
-										<div class="image">
-											<img src="img/nonna.png" alt="Cansın İçgöz" />
-											<div class="main" data-img-url="img/nonna.png">
-											</div>
-										</div>
-										<div class="overlay"></div>
-										<img class="svg" src="img/nonna.png" alt="Cansın İçgöz" />
-										<div class="details">
-											<span></span>
-											<h3></h3>
-										</div>
-
-									</div>
-								</li>
-								<li class="youtube">
-									<div class="list_inner">
-										<div class="image">
-											<img src="img/nurkagit.png" alt="Cansın İçgöz" />
-											<div class="main" data-img-url="img/nurkagit.png"></div>
-										</div>
-										<div class="overlay"></div>
-										<img class="svg" src="img/nurkagit.png" alt="Cansın İçgöz" />
-										<div class="details">
-
-										</div>
-
-									</div>
-								</li>
-								<li class="soundcloud">
-									<div class="list_inner">
-										<div class="image">
-											<img src="img/turkeygaming.png" alt="Cansın İçgöz" />
-											<div class="main" data-img-url="img/turkeygaming.png"></div>
-										</div>
-										<div class="overlay"></div>
-										<img class="svg" src="img/turkeygaming.png" alt="Cansın İçgöz" />
-										<div class="details">
-
-										</div>
-
-									</div>
-								</li>
-
-								<li class="youtube">
-
-								</li>
-
-
-
-								<div class="hidden_content">
-									<div class="popup_details">
-										<div class="main_details">
-											<div class="textbox">
-												<p>We live in a world where we need to move quickly and iterate
-													on our ideas as flexibly as possible. Building mockups
-													strikes the ideal balance ease of modification.</p>
-												<p>Mockups are useful both for the creative phase of the project
-													- for instance when you're trying to figure out your user
-													flows or the proper visual hierarchy - and the production
-													phase when they will represent the target product.</p>
-											</div>
-											<div class="detailbox">
-												<ul>
-													<li>
-														<span class="first">Client</span>
-														<span>Alvaro Morata</span>
-													</li>
-													<li>
-														<span class="first">Category</span>
-														<span><a href="#">Detail</a></span>
-													</li>
-													<li>
-														<span class="first">Date</span>
-														<span>March 07, 2021</span>
-													</li>
-													<li>
-														<span class="first">Share</span>
-														<ul class="share">
-															<li><a href="Facebook Link"><img class="svg"
-																		src="img/svg/social/facebook.svg"
-																		alt="Cansın İçgöz" /></a></li>
-															<li><a href="Twitter Link"><img class="svg"
-																		src="img/svg/social/twitter.svg"
-																		alt="Cansın İçgöz" /></a></li>
-															<li><a href="Instagram Link"><img class="svg"
-																		src="img/svg/social/instagram.svg"
-																		alt="Cansın İçgöz" /></a>
-															</li>
-														</ul>
-													</li>
-												</ul>
-											</div>
-										</div>
-										<div class="additional_images">
-											<ul>
-												<li>
-													<div class="list_inner">
-														<div class="my_image">
-															<img src="img/thumbs/4-2.jpg" alt="Cansın İçgöz" />
-															<div class="main" data-img-url="img/portfolio/1.jpg"></div>
-														</div>
-													</div>
-												</li>
-												<li>
-													<div class="list_inner">
-														<div class="my_image">
-															<img src="img/thumbs/4-2.jpg" alt="Cansın İçgöz" />
-															<div class="main" data-img-url="img/portfolio/2.jpg"></div>
-														</div>
-													</div>
-												</li>
-												<li>
-													<div class="list_inner">
-														<div class="my_image">
-															<img src="img/thumbs/4-2.jpg" alt="Cansın İçgöz" />
-															<div class="main" data-img-url="img/portfolio/3.jpg"></div>
-														</div>
-													</div>
-												</li>
-											</ul>
-										</div>
-									</div>
-								</div>
-						</div>
-						</li>
-
-						</ul>
-					</div>
-				</div>
-			</div>
-			<!-- /PORTFOLIO -->
 
 			<!-- SERVICES -->
 			<div id="service" class="iknow_tm_main_section">
@@ -585,7 +434,7 @@
 									<h3 class="title">WEB SİTESİ OLUŞTURMA/GELİŞTİRME</h3>
 									<p class="text">kurumsal / kişisel olarak standartların üzerinde Web site
 										hazırlar ve sizler için yayınlarım.</p>
-									<a class="iknow_tm_full_link" href="#"></a>
+									<a class="" href="#"></a>
 									<div class="hidden_content">
 										<div class="service_informations">
 											<div class="image">
@@ -606,7 +455,7 @@
 									<h3 class="title">WEB HOSTİNG</h3>
 									<p class="text">Web sitenizin ışık hızında açılmasına ve çalışmasına olanak
 										sağlarım.</p>
-									<a class="iknow_tm_full_link" href="#"></a>
+									<a class="" href="#"></a>
 									<div class="hidden_content">
 										<div class="service_informations">
 											<div class="image">
@@ -627,7 +476,7 @@
 									<h3 class="title">GOOGLE SEO </h3>
 									<p class="text">GOOGLE'da Web sitenizin ilk sayfalarda ve ilk sıralarda
 										çıkmasını sağlarım.</p>
-									<a class="iknow_tm_full_link" href="#"></a>
+									<a class="" href="#"></a>
 									<div class="hidden_content">
 										<div class="service_informations">
 											<div class="image">
@@ -649,7 +498,7 @@
 									<p class="text">Firmanızı bir üst boyuta taşımak için interneti kullanarak
 										satışlar yapabilirsiniz.
 									<p>
-										<a class="iknow_tm_full_link" href="#"></a>
+										<a class="" href="#"></a>
 									<div class="hidden_content">
 										<div class="service_informations">
 											<div class="image">
@@ -670,7 +519,7 @@
 									<h3 class="title">LOGO TASARIM</h3>
 									<p class="text">Logo fark yaratır ve Kimlik gibidir. Logonun önemli olduğu kadar
 										tasarımcısıda çok önemlidir</p>
-									<a class="iknow_tm_full_link" href="#"></a>
+									<a class="" href="#"></a>
 									<div class="hidden_content">
 										<div class="service_informations">
 											<div class="image">
@@ -691,7 +540,7 @@
 									<h3 class="title">ÖZEL SUNUMLAR</h3>
 									<p class="text">Profesyonel düzeyde sunum yapmak çok yorucu ve zaman alan bir
 										iştir bu konuda profesyonel danışmanlık sağlıyoruz </p>
-									<a class="iknow_tm_full_link" href="#"></a>
+									<a class="" href="#"></a>
 									<div class="hidden_content">
 										<div class="service_informations">
 											<div class="image">
