--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 							</div>
 							<div class="text">
 								<p>Merhabalar! Ben Cansın İçgöz. Web Tasarım, Yazılım ve Sosyal Medya hizmeti
-									verkemkteyim. Firmaların dijitalleşme sürecinde tüm ihtiyaçlarını bütçe ve
+									vermekteyim. Firmaların dijitalleşme sürecinde tüm ihtiyaçlarını bütçe ve
 									zamanlarına uygun bir şekilde yanlarında oluyorum.</p>
 							</div>
 							<div class="iknow_tm_button">
