--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 										</li>
 										<li>
 											<h3>Doğum Tarihi</h3>
-											<span>21 Nisan, 2001</span>
+											<span>20 Nisan, 2001</span>
 										</li>
 										<li>
 											<h3>E-Posta</h3>
@@ -301,7 +301,7 @@
 														<span>TİTAN BİLİŞİM</span>
 													</div>
 													<div class="year">
-														<span>2021 - Günümüz</span>
+														<span>2020 - 2021</span>
 													</div>
 												</div>
 												<div class="text">
